# promptbuilder

./: .gitignore  .pre-commit-config.yaml  ANALYSIS_AND_RECOMMENDATIONS.md  CHANGELOG.md  CODE_REVIEW.md  CODE_REVIEW_FIXES.md  COMPATIBILITY.md  CONTEXT.md  CONTRIBUTING.md  IMPROVEMENTS.md  LAUNCH.md  OPTIMIZATION_SUMMARY.md  PROMPT_RATING_CRITERIA.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  audit_check_alt_edgy.txt  audit_check_athletic.txt  audit_check_casual.txt  audit_check_character.txt  audit_check_fantasy.txt  audit_check_filmnoir.txt  audit_check_final.txt  audit_check_formal.txt  audit_check_futuristic.txt  audit_check_group1.txt  audit_check_group2.txt  audit_check_highfashion.txt  audit_check_hist_vintage.txt  audit_check_myth.txt  audit_check_professional.txt  audit_check_teamsports.txt  audit_check_traditions.txt  audit_results.txt  audit_results_angel_refined.txt  audit_results_batch3.txt  audit_results_batch4.txt  audit_results_legacy.txt  automate_generation.py  base_prompts.md  (+43 more)
auditing/: README.md  analyze_tag_frequency.py  audit_outfit_quality.py  compile_assets_report.py  compile_tags_report.py  consolidate_reports.py  debug_log.txt  debug_log_utf8.txt  experiment_hallie.md  find_best_worst.py  fix_tags.py  generate_sankey_diagram.py  generate_tag_sankey.py  prompt_distribution_analyzer.py  quality_audit.py  run_full_audit.py  tag_audit.py  tag_inventory.py  tag_list_dump.txt  verify_integrity.py  vibe_cohesion_report.py
automation/: README.md  ai_studio_client.py  automate_generation.py  consolidate_tags.py  purge_action_from_sports.py  purge_noise_tags.py  purify_sport_tags.py  replace_tag.py  retag_combat.py  strip_blocks.py  strip_framing_tags.py  strip_full_body.py  verify_crash_fix.py  verify_fix.py
characters/: booba.md  jena_marlowe.md  marisol_rivera.md  maya_rose.md  mela_hart.md  nora_alvarez.md  sample_character.md  siofra.md
core/: app_context.py  builder.py  config.py  definitions.py  exceptions.py  models.py  renderers.py  runner.py
data/: OUTFIT_STANDARDS.md  README.md  (+13 more)
(+1073 files in other folders)
